--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -2,13 +2,23 @@
   margin: 0 auto;
   margin-bottom: 5px;
   position: fixed;
-  top: 30;
-  left: 15%;
-  right: 15%;
-  max-width: 70%;
+  width: 100%;
   background-color: white;
   height: auto;
   z-index: 1;
+}
+
+.PostsContainer {
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+}
+
+.CardBox {
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+
 }
 
 button {
@@ -17,16 +27,21 @@ button {
 
 
 @media only screen and (min-width: 768px) {
-    main {
-      display: flex;
-      flex-direction: row
-    }
     .PostsContainer {
+     max-width: 1000px;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: center;
+     margin: 0 auto;
     }
 
+    .ButtonContainer {
+    position: fixed;
+    }
 
+    .CardBox {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
   }
